--- a/README
+++ b/README
@@ -1,4 +1,19 @@
-RECIPES
+Nnt
+========================
+
+This application was generated with the rails_apps_composer gem:
+https://github.com/RailsApps/rails_apps_composer
+provided by the RailsApps Project:
+http://railsapps.github.io/
+
+________________________
+
+Recipes:
 ["apps4", "controllers", "core", "email", "extras", "frontend", "gems", "git", "init", "models", "prelaunch", "railsapps", "readme", "routes", "saas", "setup", "testing", "views"]
-PREFERENCES
-{:git=>true, :railsapps=>"none", :dev_webserver=>"webrick", :prod_webserver=>"same", :database=>"mysql", :templates=>"haml", :unit_test=>"rspec", :integration=>"none", :continuous_testing=>"guard", :fixtures=>"factory_girl", :frontend=>"bootstrap", :bootstrap=>"sass", :email=>"none", :authentication=>"devise", :devise_modules=>"default", :authorization=>"none", :form_builder=>"none", :starter_app=>"none"}
+
+Preferences:
+{:git=>true, :railsapps=>"none", :dev_webserver=>"webrick", :prod_webserver=>"same", :database=>"mysql", :templates=>"haml", :unit_test=>"rspec", :integration=>"none", :continuous_testing=>"guard", :fixtures=>"factory_girl", :frontend=>"bootstrap", :bootstrap=>"sass", :email=>"none", :authentication=>"devise", :devise_modules=>"default", :authorization=>"none", :form_builder=>"none", :starter_app=>"none", :rvmrc=>false, :better_errors=>true, :github=>true}
+
+________________________
+
+License
